[gd_scene load_steps=4 format=3 uid="uid://bhxvs50jkdty7"]

[ext_resource type="Script" uid="uid://bg2a6m8054t5p" path="res://Humans/WalkingPedestrian.gd" id="1_ldhpp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f65ib"]
size = Vector3(0.536499, 1, 0.695557)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ldhpp"]
radius = 0.313993
height = 2.3493

[node name="WalkingPedestrian" type="Node3D"]
script = ExtResource("1_ldhpp")

[node name="Trigger" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.51, 0.648)
shape = SubResource("BoxShape3D_f65ib")

[node name="DetectionArea" type="Area3D" parent="." groups=["NPC"]]
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11351, 0)
shape = SubResource("CapsuleShape3D_ldhpp")

[connection signal="area_shape_entered" from="Trigger" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="area_shape_exited" from="Trigger" to="." method="_on_area_3d_area_shape_exited"]
[connection signal="body_entered" from="Trigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_exited" from="Trigger" to="." method="_on_trigger_body_exited"]
